[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "garch"
version = "0.1.0"
description = "ARCH / GARCH / EGARCH / GJR volatility models with MLE."
authors = [{name = "superkush06"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[tool.setuptools.packages.find]
include = ["garch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
